--- a/posts/ganitham/vocabulary.qmd
+++ b/posts/ganitham/vocabulary.qmd
@@ -21,7 +21,7 @@ categories: [Telugu, Math, Vocabulary]
 - disjoint sets: వియుక్త సమితులు
 - commom elements : ఉమ్మడి మూలకాలు
 - cardinality : కార్దినల్ సంఖ్య
-- equal sets : సంఆన సంఖ్య
+- equal sets : సమాన సంఖ్య
 - equivalent sets : సమ సమితి 
 - singleton set: ఏక మూలక సమితి
 - list : జాబితా
